--- a/credits.html
+++ b/credits.html
@@ -30,8 +30,7 @@
 
 <body>
   <main>
-    <p>Pitch doc</p>
-    <h1>To The Top!</h1>
+    <h1>Credits</h1>
     <!--Short des of game-->
     <p class="description">Bouncy Bob is a game where you have to help Bob get home. Help Bob by dodging obstacles and
       jumping around the platforms. Good luck!
@@ -39,22 +38,7 @@
     </p>
     <!--Visuals-->
     <p class="description">Some visuals of the game!</p>
-    <section class="grid">
-      <a href='MainMenu.png' class='card'>
-        <p>Main Menu</p>
-        <img src="MainMenu.png" width="450">
-      </a>
-      <a href='Game-Play.png'class='card'>
-        <p>Gameplay</p>
-        <img src="Game-Play.png" width="450">
-      </a>
-    </section>
-    <!--Video-->
-    <section class="grid">
-      <a href="https://www.youtube.com/watch?v=3ACkS-TZ20g" class='card'>
-        <h2>Video &rarr;</h2>
-      </a>
-    </section>
+    
 
   </main>
 
