--- a/index.html
+++ b/index.html
@@ -4,52 +4,57 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Bouncy Bob</title>
-  <link rel="icon" type="image/x-icon" href="Slime.ico">
+  <title>To The Top!</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <header class="headerStyle">
-  <h1 class="title">Bouncy Bob!</h1>
-</header>
-<nav class="headerStyle">
-  <a href="index.html" class="cardNav">
-    Home Page
-  </a>
-  <a href="pitch.html" class="cardNav">
-    Pitch Doc
-  </a>
-  <a href="credits.html" class="cardNav">
-    Credits
-  </a>
+  <h1 class="title">To The Top!</h1>
   <p></p>
   <hr>
+</header>
+<nav class="navStyle">
+    <ul>
+        <li><a href="index.html" class="cardNav">
+            Home Page
+        </a></li>
+        <li><a href="pitch.html" class="cardNav">
+            Pitch Doc
+        </a></li>
+        <li><a href="credits.html" class="cardNav">
+            Credits
+        </a></li>
+        <p></p>
+        <hr>
+    </ul>
 </nav>
 
 <body>
   <main>
-    
+    <!--Short des of game-->
     <p class="description">Bouncy Bob is a game where you have to help Bob get home. Help Bob by dodging obstacles and
       jumping around the platforms. Good luck!
       Hope you have fun!
     </p>
-
+    <!---->
     <section class="grid">
+        <!--Link to embed-->
       <a href="https://itch.io/embed-upload/10366150?color=333333" class='card'>
         <h2>Play &rarr;</h2>
         <p>Itch.io web edition</p>
       </a>
-
+      <!--Link to itch website-->
       <a href="https://brodep.itch.io/bouncybob" class="card">
         <h2>Play On Itch.io &rarr;</h2>
         <p>Itch.io Website</p>
       </a>
-
+      <!--Link to google drive-->
       <a href="https://drive.google.com/drive/folders/1unj_mN3R9nbtL1jp05FSsIhsg-vgKPen?usp=sharing" class='card'>
         <h2>Download &rarr;</h2>
         <p>
           You can also download the game from google drive!</p>
       </a>
     </section>
+    <!--Visuals-->
     <p class="description">Some visuals of the game!</p>
     <section class="grid">
       <a href='MainMenu.png' class='card'>
@@ -61,15 +66,10 @@
         <img src="Game-Play.png" width="450">
       </a>
     </section>
-
+    <!--Video-->
     <section class="grid">
       <a href="https://www.youtube.com/watch?v=3ACkS-TZ20g" class='card'>
         <h2>Video &rarr;</h2>
-      </a>
-    </section>
-    <section class="grid">
-      <a href="pitch.html" class="card">
-        <h2>Pitch Doc &rarr;</h2>
       </a>
     </section>
 
@@ -78,11 +78,6 @@
   <script type="module" src="script.js"></script>
 
 </body>
-<footer>
-  <hr>
-  <p>
-    Made by Luna Chavez.
-  </p>
-</footer>
+
 
 </html>
