--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
         <li><a href="pitch.html" class="cardNav">
             Pitch Doc
         </a></li>
-        <li><a href="credits.html" class="cardNav">
-            Credits
-        </a></li>
         <p></p>
         <hr>
     </ul>
@@ -31,11 +28,29 @@
 <body>
   <main>
     <!--Short des of game-->
-    <p class="description">Bouncy Bob is a game where you have to help Bob get home. Help Bob by dodging obstacles and
-      jumping around the platforms. Good luck!
-      Hope you have fun!
+    <p class="description">To the top sucks :( so goofy.
     </p>
-    <!---->
+    
+    <!--Visuals-->
+    <p class="description">Some cool pictures of my game!</p>
+    <section class="grid">
+      <a href='MainMenu.png' class='card'>
+        <p>Main Menu</p>
+        <img src="MainMenu.png" width="450">
+      </a>
+      <a href='Game-Play.png'class='card'>
+        <p>Gameplay</p>
+        <img src="Game-Play.png" width="450">
+      </a>
+    </section>
+    <!--Video-->
+    <p class="description">Video of gameplay :P</p>
+    <section class="grid">
+      <a href="https://www.youtube.com/watch?v=3ACkS-TZ20g" class='card'>
+        <h2>Video &rarr;</h2>
+      </a>
+    </section>
+    <!--play button-->
     <section class="grid">
         <!--Link to embed-->
       <a href="https://itch.io/embed-upload/10366150?color=333333" class='card'>
@@ -54,24 +69,7 @@
           You can also download the game from google drive!</p>
       </a>
     </section>
-    <!--Visuals-->
-    <p class="description">Some visuals of the game!</p>
-    <section class="grid">
-      <a href='MainMenu.png' class='card'>
-        <p>Main Menu</p>
-        <img src="MainMenu.png" width="450">
-      </a>
-      <a href='Game-Play.png'class='card'>
-        <p>Gameplay</p>
-        <img src="Game-Play.png" width="450">
-      </a>
-    </section>
-    <!--Video-->
-    <section class="grid">
-      <a href="https://www.youtube.com/watch?v=3ACkS-TZ20g" class='card'>
-        <h2>Video &rarr;</h2>
-      </a>
-    </section>
+    <!--Credits-->
 
   </main>
 
