--- a/index.html
+++ b/index.html
@@ -27,46 +27,42 @@
 
 <body>
   <main>
-    <!--Short des of game-->
-    <p class="description">To the top sucks :( so goofy.
+    <!--Des of game-->
+    <p class="description">To the top is a platformer game with the goal of making it to the top of the map before the timer.
     </p>
     
     <!--Visuals-->
     <p class="description">Some cool pictures of my game!</p>
     <section class="grid">
-      <a href='MainMenu.png' class='card'>
+      <a href='To the top menu.png' class='card'>
         <p>Main Menu</p>
-        <img src="MainMenu.png" width="450">
+        <img src="To the top menu.png" width="450">
       </a>
-      <a href='Game-Play.png'class='card'>
+      <a href='To The Top gameplay.png'class='card'>
         <p>Gameplay</p>
-        <img src="Game-Play.png" width="450">
+        <img src="To The Top gameplay.png" width="450">
       </a>
     </section>
     <!--Video-->
     <p class="description">Video of gameplay :P</p>
     <section class="grid">
-      <a href="https://www.youtube.com/watch?v=3ACkS-TZ20g" class='card'>
+      <a href="https://youtu.be/bFYLJ6NL61E" class='card'>
         <h2>Video &rarr;</h2>
       </a>
     </section>
     <!--play button-->
     <section class="grid">
         <!--Link to embed-->
-      <a href="https://itch.io/embed-upload/10366150?color=333333" class='card'>
+      <a href="https://itch.io/embed-upload/10380595?color=333333" class='card'>
         <h2>Play &rarr;</h2>
-        <p>Itch.io web edition</p>
+        <p>Itch.io moblie </p>
       </a>
       <!--Link to itch website-->
-      <a href="https://brodep.itch.io/bouncybob" class="card">
+      <a href="https://timmythebot.itch.io/to-the-top" class="card">
         <h2>Play On Itch.io &rarr;</h2>
         <p>Itch.io Website</p>
       </a>
-      <!--Link to google drive-->
-      <a href="https://drive.google.com/drive/folders/1unj_mN3R9nbtL1jp05FSsIhsg-vgKPen?usp=sharing" class='card'>
-        <h2>Download &rarr;</h2>
-        <p>
-          You can also download the game from google drive!</p>
+      
       </a>
     </section>
     <!--Credits-->
