--- a/pitch.html
+++ b/pitch.html
@@ -30,26 +30,27 @@
     <p>Pitch doc</p>
     <h1>To The Top!</h1>
     <!--Short des of game-->
-    <p class="description">Bouncy Bob is a game where you have to help Bob get home. Help Bob by dodging obstacles and
-      jumping around the platforms. Good luck!
-      Hope you have fun!
+    <p class="description">
+        This game is to the top a Platformer that gets harder as the game progresses. The goal of the game is to reach the top of the level before the timer ends. 
+        Be careful when jumping because if you miss a jump you might have a great fall. Controls are simple for downloaded game arrow keys to move and spacebar to jump. 
+                                                For mobile devices click on the buttons on the bottom of the screen.
+                                                                Game is attended for all audiences
     </p>
     <!--Visuals-->
-    <p class="description">Some visuals of the game!</p>
+    <p class="description">Game uses assets from a free comicanical use assest pack 
+        Assest pack is called Sunny Land - Pixel Game Art Collection by ansimuz and can be found on itch.io
+    </p>
+    <a href="https://ansimuz.itch.io/sunny-land-pixel-game-art"> Link to assest pack</a>
     <section class="grid">
-      <a href='MainMenu.png' class='card'>
-        <p>Main Menu</p>
-        <img src="MainMenu.png" width="450">
+      <a href='Sunnyland.png' class='card'>
+        <p></p>
+        <img src="Sunnyland.png" width="450">
       </a>
-      <a href='Game-Play.png'class='card'>
-        <p>Gameplay</p>
-        <img src="Game-Play.png" width="450">
+      <a href='To The Top gameplay.png'class='card'>
+        <p></p>
+        <img src="To The Top gameplay.png" width="450">
       </a>
-    </section>
-    <!--Video-->
-    <section class="grid">
-      <a href="https://www.youtube.com/watch?v=3ACkS-TZ20g" class='card'>
-        <h2>Video &rarr;</h2>
+   
       </a>
     </section>
 
