--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <li><a href="pitch.html" class="cardNav">
             Pitch Doc
         </a></li>
-        <p></p>
+      <button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>  
+      <p></p>
         <hr>
     </ul>
 </nav>
