--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Click me to display Date and Time.</button>
 <body>
   <main>
     <!--Des of game-->
-    <p class="description">To the top is a platformer game with the goal of making it to the top of the map before the timer.
+    <p class="description">To the top is a platformer game with the goal of making it to the top of the map before the timer. The game can be played both in the web and in moblie.
     </p>
     
     <!--Visuals-->
