--- a/pitch.html
+++ b/pitch.html
@@ -32,8 +32,9 @@
     <!--Short des of game-->
     <p class="description">
         This game is to the top a Platformer that gets harder as the game progresses. The goal of the game is to reach the top of the level before the timer ends. 
-        Be careful when jumping because if you miss a jump you might have a great fall. Controls are simple for downloaded game arrow keys to move and spacebar to jump. 
-                                                For mobile devices click on the buttons on the bottom of the screen.
+        Be careful when jumping because if you miss a jump you might have a great fall. 
+          Controls are simple for web game arrow keys to move and spacebar to jump.  For mobile devices click on the buttons on the bottom of the screen.
+                                              Competitors- There are not many popular 2D platformers in the mobile market.
                                                                 Game is attended for all audiences
     </p>
     <!--Visuals-->
